--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "less",
-  "description": "Leaner CSS",
+  "name": "baidu-jn-less",
+  "description": "Baidu jn customized less",
   "url": "http://lesscss.org",
   "keywords": [
     "css",
     "parser",
     "lesscss",
+    "baidu",
     "browser"
   ],
   "author": {
-    "name": "Alexis Sellier",
-    "email": "self@cloudhead.net"
+    "name": "osdream",
+    "email": "osdream.song@gmail.com"
   },
   "contributors": [],
-  "version": "1.3.0",
+  "version": "0.1.0",
   "bin": {
     "lessc": "./bin/lessc"
   },
@@ -24,12 +25,6 @@
   "engines": {
     "node": ">=0.4.0"
   },
-  "readme": "less.js\n=======\n\nThe **dynamic** stylesheet language.\n\n<http://lesscss.org>\n\nabout\n-----\n\nThis is the JavaScript, and now official, stable version of LESS.\n\nFor more information, visit <http://lesscss.org>.\n\nlicense\n-------\n\nSee `LICENSE` file.\n\n> Copyright (c) 2009-2011 Alexis Sellier\n",
-  "readmeFilename": "README.md",
-  "_id": "less@1.3.0",
-  "dist": {
-    "shasum": "e90d4894346e0fbf32ae683908492032451324c6"
-  },
-  "_from": "less@1.3.0",
-  "_resolved": "https://registry.npmjs.org/less/-/less-1.3.0.tgz"
+  "readme": "baidu jn customized less",
+  "readmeFilename": "README.md"
 }
